--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -199,6 +199,7 @@ button,
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 /**
@@ -290,6 +291,7 @@ textarea {
  */
 
 [type='search'] {
+  appearance: textfield; /* 1 */
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
