添加主题切换功能

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,3 +34,22 @@ body,
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
+::view-transition-old(root) {
+  z-index: 9999;
+}
+::view-transition-new(root) {
+  z-index: 1;
+}
+
+.dark::view-transition-old(root) {
+  z-index: 1;
+}
+.dark::view-transition-new(root) {
+  z-index: 9999;
+}
