--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,9 +2,11 @@
 @import url('./normalize.css');
 @import url('./nprogress.css');
 
-* {
+*,
+h1 {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html,
