--- a/src/pages/Login/index.module.less
+++ b/src/pages/Login/index.module.less
@@ -3,5 +3,74 @@
     .word {
       animation: cycle-words 8s infinite;
     }
+    .border-button-light-blur {
+      border: 3px solid transparent;
+      &::before {
+        left: -0.125rem;
+        top: -0.125rem;
+        z-index: 10;
+        border-width: 2px;
+        --tw-blur: blur(2px);
+        background:
+          linear-gradient(transparent, transparent) padding-box,
+          linear-gradient(97.68deg, rgba(255, 177, 153, 0) 38.1%, rgba(255, 177, 153, 0.2) 82.47%, #ff7950 93.3%)
+            border-box;
+      }
+      &::after {
+        left: -3px;
+        top: -3px;
+        z-index: 20;
+        border-width: 3px;
+        --tw-blur: blur(15px);
+        background:
+          linear-gradient(transparent, transparent) padding-box,
+          linear-gradient(91.88deg, rgba(255, 137, 100, 0.2) 46.45%, #cd3100 98.59%) border-box;
+      }
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        box-sizing: content-box;
+        height: 100%;
+        width: 100%;
+        border-radius: 9999px;
+        border-color: transparent;
+        border-style: solid;
+        filter: var(--tw-blur);
+      }
+    }
+    .border-button-light {
+      background:
+        linear-gradient(transparent, transparent) padding-box,
+        linear-gradient(
+            103.7deg,
+            hsla(15, 25%, 65%, 0.1) 38.66%,
+            rgba(233, 132, 99, 0.1) 68.55%,
+            #e98463 85.01%,
+            #fff 92.12%
+          )
+          border-box;
+      border-width: 1px;
+      border-color: transparent;
+      &::before {
+        content: '';
+        position: absolute;
+        left: -0.125rem;
+        top: -0.125rem;
+        z-index: 30;
+        box-sizing: content-box;
+        height: 100%;
+        width: 100%;
+        border-radius: 9999px;
+        border-width: 2px;
+        border-color: transparent;
+        --tw-blur: blur(7px);
+        filter: var(--tw-blur);
+        background:
+          linear-gradient(transparent, transparent) padding-box,
+          linear-gradient(91.96deg, rgba(255, 177, 153, 0) 6.11%, rgba(255, 177, 153, 0.2) 53.57%, #ff7950 93.6%)
+            border-box;
+      }
+    }
   }
 }
