--- a/src/pages/Login/index.module.less
+++ b/src/pages/Login/index.module.less
@@ -1,4 +1,5 @@
 .login_wrapper {
+  background: linear-gradient(#0a0b18 50%, #0a0118);
   :global {
     .word {
       animation: cycle-words 7s infinite;
@@ -70,6 +71,110 @@
           linear-gradient(transparent, transparent) padding-box,
           linear-gradient(91.96deg, rgba(255, 177, 153, 0) 6.11%, rgba(255, 177, 153, 0.2) 53.57%, #ff7950 93.6%)
             border-box;
+      }
+    }
+    .light_image {
+      position: absolute;
+      transform: scale(1);
+      transform-origin: left top;
+      transition: 0.5s ease transform;
+      img {
+        display: block;
+        transition: 1s cubic-bezier(0.6, 0.6, 0, 1) opacity;
+        height: 100%;
+        width: 100%;
+        border-style: none;
+        -webkit-user-drag: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+    }
+    .section2_bg {
+      --background-image: url(https://wope.com/images/creating-project/creating-project-finder-mask.png);
+      mask-image: var(--background-image);
+      mask-position: center;
+      mask-size: cover;
+      width: 120%;
+      transition: 1s cubic-bezier(0.6, 0.6, 0, 1) opacity;
+    }
+    .project_row {
+      transform: translate(calc(-100% + 398px));
+      transition: none;
+    }
+    .project_viewport .project_row {
+      transition: cubic-bezier(0.6, 0.6, 0, 1) transform;
+    }
+  }
+
+  .text_gradient {
+    background: linear-gradient(180deg, #fff 22.5%, #ffffffb3);
+    background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+    font-weight: 800;
+  }
+  .text_desc {
+    color: #9b96b0;
+  }
+}
+
+.cards_wrapper {
+  :global {
+    .card {
+      min-height: 200px;
+      position: relative;
+      overflow: hidden;
+      border-radius: 16px;
+      padding: 1px;
+      background: linear-gradient(180deg, #a9a3c233, #a9a3c20c);
+      &::before,
+      &::after {
+        border-radius: inherit;
+        content: '';
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.5s;
+      }
+      &::before {
+        background: radial-gradient(
+          700px circle at var(--mouse-x) var(--mouse-y),
+          rgba(255, 255, 255, 0.06),
+          transparent 40%
+        );
+        z-index: 15;
+      }
+      &::after {
+        background: radial-gradient(
+          700px circle at var(--mouse-x) var(--mouse-y),
+          rgba(255, 255, 255, 0.4),
+          transparent 40%
+        );
+        z-index: 1;
+      }
+      &:hover::before {
+        opacity: 1;
+      }
+      .card_content {
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        position: relative;
+        background-color: #0a0118;
+        border-radius: inherit;
+        overflow: hidden;
+      }
+    }
+  }
+  &:hover {
+    :global {
+      .card::after {
+        opacity: 1;
       }
     }
   }
