--- a/src/pages/Login/index.module.less
+++ b/src/pages/Login/index.module.less
@@ -88,8 +88,8 @@
       transform-origin: left top;
       transition: 0.5s ease transform;
       img {
-        height: 100%;
-        width: 100%;
+        // height: 100%;
+        // width: 100%;
       }
     }
     .projects_bg {
@@ -107,7 +107,7 @@
       transform: translate(calc(var(--translate-x) + 100px));
     }
     .section2_box:not(.project_viewport) .project_row {
-      transform: translate(-200%);
+      transform: translate(calc(-100% + 400px));
       transition: none;
     }
     .project_row:nth-child(1) {
@@ -125,6 +125,9 @@
     .project_row:nth-child(4) {
       --translate-x: -320px;
       transition-duration: 4s;
+    }
+    .project_row {
+      width: max-content;
     }
     .projects_inner,
     .project_row {
