--- a/src/pages/Login/index.module.less
+++ b/src/pages/Login/index.module.less
@@ -162,6 +162,17 @@
     .text_desc {
       color: #9b96b0;
     }
+
+    .section5_box {
+      background-image: url('https://wope.com/images/cta/cta-background.png');
+      background-size: cover;
+      width: 100%;
+      aspect-ratio: 1.75;
+      overflow: hidden;
+      position: relative;
+      z-index: 0;
+      min-height: 400px;
+    }
   }
 }
 
