--- a/src/pages/Login/index.module.less
+++ b/src/pages/Login/index.module.less
@@ -1,5 +1,5 @@
 .login_wrapper {
-  background: linear-gradient(#0a0b18 50%, #0a0118);
+  background: linear-gradient(to bottom, #0a0b18 50%, #0a0118);
   :global {
     .word {
       animation: cycle-words 7s infinite;
@@ -131,6 +131,10 @@
       transition: cubic-bezier(0.6, 0.6, 0, 1) transform;
     }
 
+    .footer_box {
+      background: radial-gradient(32.81% 53.93% at 50% 0%, #8566ff0a, #8566ff00 100%, #8566ff00);
+    }
+
     .footer_top {
       &::after {
         background: radial-gradient(50% 56400% at 50% 100%, #a9a3c23d, #a9a3c200);
@@ -172,6 +176,15 @@
       position: relative;
       z-index: 0;
       min-height: 400px;
+      .img_animation {
+        pointer-events: none;
+        position: absolute;
+        left: 50%;
+        top: -62px;
+        transform: translateX(-50%);
+        opacity: 0.5;
+        width: 110.6%;
+      }
     }
   }
 }
